Overflow corrected, item style mobile done

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body{
   position: relative;
   grid-gap: 0.4rem;
   height: 100vh;
-  width: 94vw;  
+  width: 100vw;  
   grid-template-rows: 0.1fr 1fr 0.1fr;
   grid-template-areas :    
   "header header" 
@@ -239,19 +239,17 @@ footer{
   display: grid;
   justify-content: center;
   grid-template-columns: 1fr;
-  background-color: rgb(57, 212, 233);
+  /* background-color: rgb(57, 212, 233); */
   height: 100%;
-  width: 90vw;
-  
-  
+  width: 90vw;    
 }
 
 .saleItemContainer{
   border: 1px #000 solid;
   border-radius: 6px;
-  
-  
-  width: 90vw
+  width: 90vw;
+
+  padding: 1rem 1rem 0.8rem 1rem ;
   
 }
 
@@ -259,7 +257,11 @@ footer{
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center;  
+}
+
+.saleItem p {
+  margin: 1rem 0 0.6rem 0;
 }
 
 .saleItemImg{
@@ -268,13 +270,33 @@ footer{
   height: 6rem;
 }
 
+.itemPrice{
+  font-size: 1.6rem;
+  font-weight: bold;
+  text-align: right;
+  
+}
+
+.titleImgContainer{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+
+.titleImgContainer > h2{
+  margin: 0 0 0.8rem 0;
+ 
+}
+
 
 /* --- MEDIA QUERIES --- */
 
  @media (min-width: 320px){
 
   .App{
-    width: 94vw; 
+    
+    overflow-x: hidden; 
   }
 
   /* --- Main --- */
@@ -294,9 +316,6 @@ footer{
 
 @media (min-width: 480px){
 
-  .App{
-    width: 95vw;
-  }
   
   /* --- Main --- */
   main{
@@ -365,9 +384,7 @@ footer{
 
 @media (min-width: 720px){
 
-  .App{
-    width: 97vw;
-  }
+  
 
   /* --- Topnav --- */
   .hmbgIcon{
